<resources>

    <string name="app_name">Poupa Mais</string>
    <string name="save">Salvar</string>
    <string name="cancel">Cancelar</string>
    <string name="save_data">Dados Salvos</string>
    <string name="email">E-mail</string>
    <string name="error_login">Email ou Senha Invalidos</string>
    <string name="password"> Senha</string>
    <string name="register">Cadastre-se</string>
    <string name="login">Login</string>
    <string name="name">Nome</string>
    <string name="age">Idade</string>
    <string name="state">Estado</string>
    <string name="terms_of_use"> Aceita os termos de uso do aplicativo</string>
    <string name="function_disabled">Função indisponível</string>
    <string name="gender">Gênero</string>
    <string name="add">Adicionar</string>
    <string name="insert_genero">Preencha Gênero</string>
    <string name="terms">Aceite os termos de uso</string>
    <string name="masculine">Masculino</string>
    <string name="feminine">Feminino</string>
    <string name="clear">Limpar</string>
    <string name="clear_data">Dados limpos</string>
    <string name="insert_password">Preencha a senha</string>
    <string name="insert_email">Preencha o E-mail</string>
    <string name="insert_name">Preencha o nome</string>
    <string name="insert_mark">Preencha a meta</string>
    <string name="insert_balance">Preencha o saldo</string>
    <string name="creat_at">Creat by: Herisson Jean</string>
    <string name="myEmail">Email: herisson@alunos.utfpr.edu.br</string>
    <string name="class_pdm">EIF69S - Programação para Dispositivos Móveis</string>
    <string name="about">O aplicativo Poupa Mais tem como função ajudar o usuário a gerir suas metas financeiras e fazer uma poupança</string>
    <string name="about_button">Sobre</string>
    <string name="Register_your_goal">Registre sua meta</string>
    <string name="Mark">Meta :</string>
    <string name="Balance">Saldo :</string>
    <string name="fees">juros :</string>
    <string name="Reminder">Lembrete :</string>
    <string name="Reminder_about">Deixe seu lembrete aqui</string>
    <string name="clue">Dicas</string>
    <string name="clue_login">Para acessar basta deixar os campos de login e senha em branco e aceitar os termos de uso</string>
    <string name="month">Mês :</string>
    <string name="about_mark"> Valor a ser alcançado</string>
    <string name="about_balance"> Valor disponivel atual</string>
    <string name="about_fees"> Caso a poupança renda juros</string>
    <string name="about_reminder"> Campo para deixar uma messagem de lembrete ou motivacional para sua meta</string>
    <string name="about_mount"> Referência ao mês que a poupança vai ocorrer</string>
    <string name="msg_delete">Deseja excluir esse item?</string>
    <string name="exclude"> Excluir</string>
    <string name="yes"> yes</string>
    <string name="no"> no</string>

    <string name="ac">Acre (AC)</string>
    <string name="al">Alagoas (AL)</string>
    <string name="ap">Amapá (AP)</string>
    <string name="am">Amazonas (AM)</string>
    <string name="bh">Bahia (BA)</string>
    <string name="ce">Ceará (CE)</string>
    <string name="df">Distrito Federal (DF)</string>
    <string name="es">Espírito Santo (ES)</string>
    <string name="go">Goiás (GO)</string>
    <string name="ma">Maranhão (MA)</string>
    <string name="mt">Mato Grosso (MT)</string>
    <string name="ms">Mato Grosso do Sul(MT)</string>
    <string name="mg">Minas Gerais (MG)</string>
    <string name="pb">Paraíba (PB)</string>
    <string name="pa">Pará (PA)</string>
    <string name="pr">Paraná (PR)</string>
    <string name="pe">Pernambuco (PE)</string>
    <string name="pi">Piauí (PI)</string>
    <string name="rj">Rio de Janeiro (RJ)</string>
    <string name="rn">Rio Grande do Norte (RN)</string>
    <string name="rs">Rio Grande do Sul (RS)</string>
    <string name="ro">Rondônia (RO)</string>
    <string name="rr">Roraima (RR)</string>
    <string name="sc">Santa Catarina (SC)</string>
    <string name="sp">São Paulo (SP)</string>
    <string name="se">Sergipe (SE)</string>
    <string name="to">Tocantins (TO)</string>

    <string name="janeiro">Janeiro</string>
    <string name="fevereiro">Fevereiro</string>
    <string name="março">Março</string>
    <string name="abril">Abril</string>
    <string name="maio">Maio</string>
    <string name="junho">Junho</string>
    <string name="julho">Julho</string>
    <string name="agosto">Agosto</string>
    <string name="setembro">Setembro</string>
    <string name="outubro">Outubro</string>
    <string name="novembro">Novembro</string>
    <string name="dezembro">Dezembro</string>

    <string name="saldo1">12,50</string>
    <string name="saldo2">25,02</string>
    <string name="saldo3">56,00</string>
    <string name="saldo4">86,00</string>
    <string name="saldo5">74,00</string>
    <string name="saldo6">35,00</string>
    <string name="saldo7">73,00</string>
    <string name="saldo8">21,00</string>
    <string name="saldo9">34,00</string>
    <string name="saldo10">46,00</string>
    <string name="saldo11">13,00</string>
    <string name="saldo12">100,00</string>

    <string name="meta1">100,00</string>
    <string name="meta2">200,00</string>
    <string name="meta3">300,00</string>
    <string name="meta4">400,00</string>
    <string name="meta5">500,00</string>
    <string name="meta6">600,00</string>
    <string name="meta7">700,00</string>
    <string name="meta8">800,00</string>
    <string name="meta9">900,00</string>
    <string name="meta10">1000,00</string>
    <string name="meta11">1100,00</string>
    <string name="meta12">1200,00</string>

    <string name="fees1">1%</string>
    <string name="fees2">2%</string>
    <string name="fees3">3%</string>
    <string name="fees4">4%</string>
    <string name="fees5">5%</string>
    <string name="fees6">6%</string>
    <string name="fees7">7%</string>
    <string name="fees8">8%</string>
    <string name="fees9">9%</string>
    <string name="fees10">10%</string>
    <string name="fees11">11%</string>
    <string name="fees12">12%</string>


</resources>